Travis yaml file

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,5 +5,24 @@ php:
   - 7.0
   - 7.2
 
+before_script:
+  - mkdir bootstrap/cache
+  - mkdir storage
+  - mkdir storage/app
+  - mkdir storage/framework
+  - mkdir storage/framework/sessions
+  - mkdir storage/framework/cache
+  - mkdir storage/framework/views
+  - chmod 777 -R storage
+  - cp .env.travis .env
+  - mysql -e 'create database homestead_test;'
+  - composer self-update
+  - composer install --no-interaction
+  - php artisan key:generate
+
+branches:
+  except:
+    - gh-pages
+
 script:
   - vendor/bin/phpunit
