--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,12 @@ php:
   - 7.2
 
 before_script:
+  - chmod 777 -R storage
+  - cp .env.travis .env
+  - mysql -e 'create database homestead_test;'
+  - composer self-update
   - composer install --no-interaction
+  - php artisan key:generate
 
 script:
   - vendor/bin/phpunit
