--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ php:
 
 before_script:
   - chmod 777 -R storage
-  - cp .env.travis .env
+  - cp .env.example .env
   - mysql -e 'create database homestead_test;'
   - composer self-update
   - composer install --no-interaction
